test-results/consume_error.err
[1m/mnt/c/Users/matthew/git/upp/examples/consume_error.c:19:1: error: @test_error_missing expected compound_statement, but nothing found[0m
@test_error_missing
[1;31m^[0m
